# ai-chatbot

./: .env.example  .gitignore  README.md  docker-compose.yml  init.sql  main.py  pyproject.toml  test_parser.py
app/: config.py
app/agent/: agent.py
app/config/: settings.py
app/database/: __init__.py  connection.py  models.py  vector_store.py
app/routes/: chat.py
app/schemas/: __init__.py  chat.py  document.py  embedding.py
app/services/: document_parser.py  embeddings.py  rag.py
app/utils/: document_parser.py  tokenizer.py
scripts/: ingest.py
